examples/test/testpolicy3244.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3244
  namespace: namespace475
spec:
  podSelector:
    matchLabels:
      key48: value19
      key16: value5
      key21: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value14
          key18: value5
      podSelector:
        matchLabels:
          key27: value15
